# revise

./: .gitignore  Cargo.toml  README.md  build.rs  my_set.json  set_2.json  test.ron
cli/: Cargo.toml  e.set  test.set
cli/src/: learn.rs  main.rs  report.rs  report_parse_error.rs  ui.rs
database/: Cargo.toml
database/src/: lib.rs
html/: babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
html/src/: dashboard.ejs  dashboard.scss  dashboard.tsx  home.ejs  home.tsx  setPassword.tsx
migrations/: 20211125180413_migration.sql
parser/: Cargo.toml  grammar.ebnf
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: parse_guess.rs  parse_set.rs
parser/src/: guess.rs  lib.rs  set.rs
set-parser/: Cargo.toml
set-parser/fuzz/: Cargo.toml
set-parser/fuzz/fuzz_targets/: parse.rs
set-parser/src/: lib.rs
src/: accounts.rs  cards.rs  dynamic_assets.rs  event.rs  lib.rs  main.rs  session.rs  static_assets.rs  term.rs  ui.rs  user_events.rs  utils.rs
