[package]
name = "revise"
description = "Web server behind the revise web app"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.48"
axum = { version = "0.4.0", features = ["headers"] }
axum-server = { version = "0.3.3", features = ["tls-rustls"] }
headers = "0.3.5"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["fs"] }

[build-dependencies]
base64 = "0.13.0"
md-5 = "0.9.1"
