[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "2.33.3"
crossterm = "0.17.7"
directories-next = "1.0.1"
ron = "0.6.2"
scopeguard = "1.1.0"
serde = { version = "1.0.116", features = ["derive"] }
unicode-width = "0.1.8"
rand = "0.7.3"
revise = { path = ".." }
