[package]
name = "revise-cli"
version = "0.3.0"
edition = "2018"
publish = false
description = "Utility for learning and revising"

[dependencies]
annotate-snippets = { version = "0.9.0", features = ["color"] }
anyhow = "1.0.42"
crossterm = "0.20.0"
directories = "3.0.2"
rand = "0.8.4"
scopeguard = "1.1.0"
structopt = "0.3.22"
unicode-width = "0.1.8"
thiserror = "1.0.26"

revise-database = { path = "../database" }
revise-set-parser = { path = "../set-parser" }

[dev-dependencies]
maplit = "1.0.2"

[[bin]]
name = "revise"
path = "src/main.rs"
