[package]
name = "revise-cli"
version = "0.3.0"
edition = "2021"
publish = false
description = "Utility for learning and revising"

[dependencies]
annotate-snippets = { version = "0.9.0", features = ["color"] }
anyhow = "1.0.42"
clap = { version = "3.1.14", features = ["derive"] }
crossterm = "0.23.2"
directories = "4.0.1"
rand = "0.8.4"
scopeguard = "1.1.0"
unicode-width = "0.1.8"
thiserror = "1.0.26"

revise-database = { path = "../database" }
revise-parser = { path = "../parser" }

[[bin]]
name = "revise"
path = "src/main.rs"
