[package]
name = "revise-parser-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.revise-parser]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_set"
path = "fuzz_targets/parse_set.rs"
test = false
doc = false

[[bin]]
name = "parse_guess"
path = "fuzz_targets/parse_guess.rs"
test = false
doc = false
